[role:sft-server] Allow to disable SFT metrics and the resulting installation of dependencies
Default: enabled

In some cases, e.g. to test deploy the SFT, metrics are not needed. Feature-flagging this
part simplifies installation a/o updating of sftd.
Allowing to disable the installation of metrics also allows to not require providing a
source (or credentials) to (access) the certificate that is used for Prometheus
authentication.

--- a/roles/sft-server/defaults/main.yml
+++ b/roles/sft-server/defaults/main.yml
@@ -80,3 +80,5 @@ systemd_coredump_max_file_size: '4G'
 
 # diffie-hellman keysize for nginx
 sft_nginx_dh_keysize: 4096
+
+sft_metrics_enabled: true
