--- a/roles/sft-server/meta/main.yml
+++ b/roles/sft-server/meta/main.yml
@@ -20,3 +20,4 @@ dependencies:
   - role: cloudalchemy.node-exporter
     vars:
       node_exporter_web_listen_address: "127.0.0.1:{{ sft_node_exporter_port }}"
+    when: sft_metrics_enabled
